fix navbar spacing

--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -22,7 +22,7 @@ h1 {
 	margin-bottom: 20px;
 }
 .page-fill {
-	padding-top: 40px;
+	padding-top: 60px;
 	height: 100%;
 	width: 100%;
 }
